--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 #meme-image {
   position: absolute;
   border: solid black 2px;
-  width: 400px;
-  height: 400px;
+  width: 399px;
+  height: 399px;
   box-sizing: border-box;
 }
 
 #meme-text {
   position: absolute;
   width: 380px;
-  height: 160px;
+  height: 150px;
   margin-left: 10px;
   margin-top: 240px;
   text-align: center;
@@ -19,4 +19,7 @@
   width: 400px;
   height: 400px;
   box-sizing: border-box;
+  border: solid black 1px;
+  background-color: white;
 }
+
