--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
   margin-top: 240px;
   text-align: center;
   font-size: 30px;
+  color: white;
+  text-shadow: 5px 5px 5px black;
 }
 #meme-image-container {
   width: 400px;
